fix: get footer looking right on mobile

--- a/public/css/manifest.css
+++ b/public/css/manifest.css
@@ -100,6 +100,7 @@ ul {
   background-color: rgba(0, 0, 0, 0.7); }
 
 footer {
+  box-sizing: border-box;
   text-align: center;
   height: 30px;
   position: absolute;
@@ -109,8 +110,11 @@ footer {
   width: 100%;
   font-size: 11px;
   text-transform: uppercase;
-  padding: 2em 0;
+  margin: 2em 0;
+  padding: 0 1em;
   color: #C3C3C3; }
+  footer p {
+    line-height: 1.5; }
   footer a {
     color: #C3C3C3; }
 
